There was a rendering problem on github. Solving that problem with this update.

--- a/graphAnalysisofHumanClusters.ipynb
+++ b/graphAnalysisofHumanClusters.ipynb
@@ -911,7 +911,8 @@
     "print(duplicatedGeneNames)\n",
     "#Removing Duplicated Gene Names\n",
     "expressionData=expressionData[!duplicatedGenesLogicalIndices,]\n",
-    "print(dim(expressionData))"
+    "print(dim(expressionData))\n",
+    "geneNames=as.character(expressionData$V1[grep(\"^PRKAR\",expressionData$V1)])"
    ]
   },
   {
@@ -1152,7 +1153,6 @@
     "    geneNames=dataFrame[,c(1)]\n",
     "    dataFrame=dataFrame[,c(-1)]\n",
     "    averageExpression=apply(dataFrame,1,mean)\n",
-    "    names(averageExpression)=geneNames\n",
     "    return(averageExpression)\n",
     "})"
    ]
@@ -1163,135 +1163,21 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<thead><tr><th></th><th scope=col>01.cl01_nc</th><th scope=col>01.cl02_nc</th><th scope=col>01.cl03_nc</th><th scope=col>01.cl04_nc</th><th scope=col>01.cl05_nc</th><th scope=col>01.cl06_nc</th><th scope=col>01.cl07_nc</th><th scope=col>01.cl08_nc</th><th scope=col>01.cl09_nc</th><th scope=col>01.cl10_nc</th><th scope=col>01.cl11_nc</th><th scope=col>01.cl13_nc</th><th scope=col>01.cl14_nc</th><th scope=col>01.cl15_nc</th><th scope=col>01.cl16_nc</th><th scope=col>01.cl17_nc</th></tr></thead>\n",
-       "<tbody>\n",
-       "\t<tr><th scope=row>PRKAR2A</th><td>3.920657</td><td>4.574486</td><td>4.701192</td><td>4.956577</td><td>4.536961</td><td>4.317001</td><td>4.561112</td><td>4.474946</td><td>4.861568</td><td>4.033659</td><td>4.295217</td><td>4.617649</td><td>4.450949</td><td>4.180151</td><td>4.660382</td><td>4.890738</td></tr>\n",
-       "\t<tr><th scope=row>PRKAR1B</th><td>6.444641</td><td>7.081642</td><td>6.402133</td><td>6.842159</td><td>6.494801</td><td>6.136058</td><td>6.713791</td><td>6.464925</td><td>5.476892</td><td>5.307974</td><td>5.090710</td><td>5.143168</td><td>4.806447</td><td>5.040183</td><td>5.242789</td><td>5.575539</td></tr>\n",
-       "\t<tr><th scope=row>PRKAR2B</th><td>4.909311</td><td>4.983816</td><td>4.550339</td><td>5.575009</td><td>5.192975</td><td>4.824455</td><td>4.813804</td><td>5.881392</td><td>3.630461</td><td>2.925605</td><td>3.168281</td><td>3.403692</td><td>2.920348</td><td>4.121124</td><td>5.655728</td><td>5.214628</td></tr>\n",
-       "\t<tr><th scope=row>PRKAR1A</th><td>5.027072</td><td>4.374618</td><td>5.091229</td><td>3.904240</td><td>4.708379</td><td>3.679081</td><td>4.903691</td><td>4.777307</td><td>5.601783</td><td>4.070108</td><td>4.209796</td><td>5.526921</td><td>4.836823</td><td>4.946132</td><td>6.007255</td><td>4.813644</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "\\begin{tabular}{r|llllllllllllllll}\n",
-       "  & 01.cl01_nc & 01.cl02_nc & 01.cl03_nc & 01.cl04_nc & 01.cl05_nc & 01.cl06_nc & 01.cl07_nc & 01.cl08_nc & 01.cl09_nc & 01.cl10_nc & 01.cl11_nc & 01.cl13_nc & 01.cl14_nc & 01.cl15_nc & 01.cl16_nc & 01.cl17_nc\\\\\n",
-       "\\hline\n",
-       "\tPRKAR2A & 3.920657 & 4.574486 & 4.701192 & 4.956577 & 4.536961 & 4.317001 & 4.561112 & 4.474946 & 4.861568 & 4.033659 & 4.295217 & 4.617649 & 4.450949 & 4.180151 & 4.660382 & 4.890738\\\\\n",
-       "\tPRKAR1B & 6.444641 & 7.081642 & 6.402133 & 6.842159 & 6.494801 & 6.136058 & 6.713791 & 6.464925 & 5.476892 & 5.307974 & 5.090710 & 5.143168 & 4.806447 & 5.040183 & 5.242789 & 5.575539\\\\\n",
-       "\tPRKAR2B & 4.909311 & 4.983816 & 4.550339 & 5.575009 & 5.192975 & 4.824455 & 4.813804 & 5.881392 & 3.630461 & 2.925605 & 3.168281 & 3.403692 & 2.920348 & 4.121124 & 5.655728 & 5.214628\\\\\n",
-       "\tPRKAR1A & 5.027072 & 4.374618 & 5.091229 & 3.904240 & 4.708379 & 3.679081 & 4.903691 & 4.777307 & 5.601783 & 4.070108 & 4.209796 & 5.526921 & 4.836823 & 4.946132 & 6.007255 & 4.813644\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "1. 3.92065674360641\n",
-       "2. 6.44464087062906\n",
-       "3. 4.90931119580892\n",
-       "4. 5.02707241286388\n",
-       "5. 4.57448617898559\n",
-       "6. 7.08164214491827\n",
-       "7. 4.98381601154101\n",
-       "8. 4.37461849541902\n",
-       "9. 4.70119247767259\n",
-       "10. 6.40213349781041\n",
-       "11. 4.55033887078589\n",
-       "12. 5.09122900901318\n",
-       "13. 4.95657675003273\n",
-       "14. 6.84215892801859\n",
-       "15. 5.57500921116165\n",
-       "16. 3.90423985238043\n",
-       "17. 4.53696095958953\n",
-       "18. 6.49480074668167\n",
-       "19. 5.19297493296073\n",
-       "20. 4.70837912616207\n",
-       "21. 4.31700132819295\n",
-       "22. 6.1360575066098\n",
-       "23. 4.82445490199061\n",
-       "24. 3.67908112155277\n",
-       "25. 4.5611117798971\n",
-       "26. 6.71379084468324\n",
-       "27. 4.81380371874092\n",
-       "28. 4.90369090275113\n",
-       "29. 4.4749461642748\n",
-       "30. 6.46492461790214\n",
-       "31. 5.88139229991149\n",
-       "32. 4.77730660540912\n",
-       "33. 4.86156847519181\n",
-       "34. 5.47689172781061\n",
-       "35. 3.63046073900644\n",
-       "36. 5.60178280750344\n",
-       "37. 4.03365932206215\n",
-       "38. 5.30797382547698\n",
-       "39. 2.92560511062809\n",
-       "40. 4.0701083747702\n",
-       "41. 4.29521717406321\n",
-       "42. 5.09071046690355\n",
-       "43. 3.16828061589599\n",
-       "44. 4.20979588666624\n",
-       "45. 4.61764894267653\n",
-       "46. 5.14316816423885\n",
-       "47. 3.4036915812343\n",
-       "48. 5.52692116090843\n",
-       "49. 4.4509489702314\n",
-       "50. 4.80644702207861\n",
-       "51. 2.92034769286251\n",
-       "52. 4.83682264666776\n",
-       "53. 4.1801506349288\n",
-       "54. 5.04018289336312\n",
-       "55. 4.12112402734473\n",
-       "56. 4.94613216948341\n",
-       "57. 4.66038157645783\n",
-       "58. 5.24278881570326\n",
-       "59. 5.65572761946311\n",
-       "60. 6.00725512386098\n",
-       "61. 4.89073750650518\n",
-       "62. 5.57553880349133\n",
-       "63. 5.214627753478\n",
-       "64. 4.81364429022063\n",
-       "\n",
-       "\n"
-      ],
-      "text/plain": [
-       "        01.cl01_nc 01.cl02_nc 01.cl03_nc 01.cl04_nc 01.cl05_nc 01.cl06_nc\n",
-       "PRKAR2A   3.920657   4.574486   4.701192   4.956577   4.536961   4.317001\n",
-       "PRKAR1B   6.444641   7.081642   6.402133   6.842159   6.494801   6.136058\n",
-       "PRKAR2B   4.909311   4.983816   4.550339   5.575009   5.192975   4.824455\n",
-       "PRKAR1A   5.027072   4.374618   5.091229   3.904240   4.708379   3.679081\n",
-       "        01.cl07_nc 01.cl08_nc 01.cl09_nc 01.cl10_nc 01.cl11_nc 01.cl13_nc\n",
-       "PRKAR2A   4.561112   4.474946   4.861568   4.033659   4.295217   4.617649\n",
-       "PRKAR1B   6.713791   6.464925   5.476892   5.307974   5.090710   5.143168\n",
-       "PRKAR2B   4.813804   5.881392   3.630461   2.925605   3.168281   3.403692\n",
-       "PRKAR1A   4.903691   4.777307   5.601783   4.070108   4.209796   5.526921\n",
-       "        01.cl14_nc 01.cl15_nc 01.cl16_nc 01.cl17_nc\n",
-       "PRKAR2A   4.450949   4.180151   4.660382   4.890738\n",
-       "PRKAR1B   4.806447   5.040183   5.242789   5.575539\n",
-       "PRKAR2B   2.920348   4.121124   5.655728   5.214628\n",
-       "PRKAR1A   4.836823   4.946132   6.007255   4.813644"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "colnames(expressionLevelAverages)=clusterNames\n",
-    "expressionLevelAverages"
+    "expressionLevelAverages=cbind(geneNames,expressionLevelAverages)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "write.table(expressionLevelAverages,\"expressionAcrossClusters.csv\",quote=FALSE,sep = \",\")\n"
+    "write.table(expressionLevelAverages,\"expressionAcrossClusters.csv\",quote=FALSE, sep = \",\", row.names=FALSE)\n"
    ]
   }
  ],
